# DeviceOS

./: .gitignore  CMakeLists.txt  DeviceOS_Master_PRD.md  README.md  go.mod  provision_all.ps1  qa_test.js  simulate_esp32.py  test_api.py  test_ble.py  test_simulator.py
cli/cmd/deviceos/: main.go
cli/simulator/: cors_test.go  simulator_bench_test.go  simulator_test.go  state_machine.go  transport.go
cloud/: test_db.go  test_deviceos.db
cloud/cmd/server/: main.go  websocket.go
cloud/pkg/database/: db.go
cloud/pkg/shadow/: shadow.go
dashboard/: package-lock.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
docs/: USER_GUIDE.md  benchmarks.md  roadmap.md
docs/adr/: 003_device_shadow_architecture.md  004_state_sync_cpp_engine.md  005_bidirectional_state_synchronization.md  006_realtime_websocket_console.md  007_dual_partition_ota_updates.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/: ble_gatt_provisioner.dart  ble_peripheral_manager.dart  http_simulated_provisioner.dart  provisioning_transport.dart  shadow_client.dart
mobile/lib/screens/: onboarding_screen.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/test/core/: ble_peripheral_manager_test.dart
mobile/test/screens/: dashboard_screen_test.dart  onboarding_screen_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
runtime/include/core/: EventBus.h  EventTypes.h  ILifecycle.h  OTAManager.h  OfflineCache.h  Result.h  RulesEngine.h  Scheduler.h  ServiceContainer.h  StateMachine.h  StateSync.h
runtime/include/hal/: IBluetooth.h  IConfig.h  IGPIO.h  ILogging.h  INetwork.h  IOTA.h  IPower.h  (+2 more)
tests/: cloud_test.go  compile_test.cpp
(+30 files in other folders)
